--- a/study-project/css/button.css
+++ b/study-project/css/button.css
@@ -3,10 +3,10 @@
     line-height: 24px;
     padding: 0 35px;
     text-transform: uppercase;
-    color: #614444;
+    color: #3c7092;
     border: 0;
     border-radius: 12px;
-    background-color: #110202;
+    background-color: #999556;
     height: 48px;
     cursor: pointer;
     filter: drop-shadow(0px 8px 16px rgba(38, 38, 38, 0.24));
