--- a/study-project/css/button.css
+++ b/study-project/css/button.css
@@ -6,10 +6,10 @@
     color: #614444;
     border: 0;
     border-radius: 12px;
-    background-color: #110202;
+    background-color: #6bac17;
     height: 48px;
     cursor: pointer;
-    filter: drop-shadow(0px 8px 16px rgba(38, 38, 38, 0.24));
+    filter: drop-shadow(0px 8px 1px rgba(38, 38, 38, 0.24));
     outline: none;
 }
 
