--- a/study-project/css/footer.css
+++ b/study-project/css/footer.css
@@ -6,7 +6,7 @@
     font-weight: bold;
     font-size: 14px;
     line-height: 22px;
-    color: #4B4B4B;
+    color: #d84a4a;
 }
 
 .footer__menu {
