--- a/study-project/css/contact.css
+++ b/study-project/css/contact.css
@@ -6,7 +6,7 @@
 
 .contact-form__wrapper {
     padding: 75px 55px;
-    background: #5db589;
+    background: #a1782c;
     border-radius: 40px;
 }
 
